--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "copy-to-clipboard": "^3.3.3",
+    "firebase": "^9.22.1",
     "posthog-js": "^1.51.2",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
