--- a/ui/package.json
+++ b/ui/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^18.15.0",
     "tailwindcss": "^3.2.7"
   }
